dacat-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dacat-api
  labels:
    name: dacat-api
  namespace: $LOCAL_ENV
spec:
  type: NodePort
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 3000
    nodePort: $PORTOFFSET
  selector:
    name: dacat-api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dacat-api
  namespace: $LOCAL_ENV
spec:
  tls:
  - hosts:
    - "dacat$HOST_EXT.psi.ch"
    secretName: dacat$HOST_EXT-certificate-secret
  rules:
  - host: dacat$HOST_EXT.psi.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: dacat-api
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dacat-api
  namespace: $LOCAL_ENV
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: dacat-api
    spec:
      containers:
      - name: dacat-api
        image: registry.psi.ch:5000/egli/dacatapiserver:$DACAT_IMAGE_VERSION
        command: [ "/bin/sh","-c","ls -al . ; ls -al server; cat server/config.json; echo 'Environment:'
         $LOCAL_ENV; node ." ]
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        volumeMounts:
        - name: config-volume
          mountPath: /usr/src/app/server/config.local.js
          subPath: config.local.js
        - name: config-volume
          mountPath: /usr/src/app/server/component-config.$LOCAL_ENV.json
          subPath: component-config.$LOCAL_ENV.json
        - name: config-volume
          mountPath: /usr/src/app/server/middleware.$LOCAL_ENV.json
          subPath: middleware.$LOCAL_ENV.json
        - name: secret-volume
          mountPath: /usr/src/app/server/providers.local.json
          subPath: providers.local.json
        - name: secret-volume
          mountPath: /usr/src/app/server/datasources.$LOCAL_ENV.json
          subPath: datasources.$LOCAL_ENV.json
        - name: secret-volume
          mountPath: /usr/src/app/server/admin
          subPath: admin
        - name: secret-volume
          mountPath: /usr/src/app/server/archiveManager
          subPath: archiveManager
        - name: secret-volume
          mountPath: /usr/src/app/server/ingestor
          subPath: ingestor
        - name: secret-volume
          mountPath: /usr/src/app/server/proposalIngestor
          subPath: proposalIngestor
        - name: secret-volume
          mountPath: /usr/src/app/server/userGroupIngestor
          subPath: userGroupIngestor
      volumes:
        - name: config-volume
          configMap:
            name: dacatapi-config
        - name: secret-volume
          secret:
            secretName: dacat-secret

      imagePullSecrets:
        - name: registrypullsecret
